# chiaki-ng

./: .gitmodules  CMakeLists.txt  build.sh
cmake/: FindMbedTLS.cmake
gui/src/: controllermanager.cpp  qmlbackend.cpp  qmlmainwindow.cpp  streamsession.cpp
lib/: CMakeLists.txt
lib/include/chiaki/: ecdh.h  ffmpegdecoder.h  sock.h  thread.h
lib/src/: opusdecoder.c  opusencoder.c
lib/src/remote/: holepunch.c
